[gd_scene load_steps=2 format=3 uid="uid://6wdyubr0cis2"]

[ext_resource type="Script" uid="uid://ib5swbnbulvr" path="res://scripts/ui/GenerateDialogPanel.gd" id="1"]

[node name="GenerateDialog" type="WindowDialog"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 0
auto_translate_mode = 0
editor_description = ""
script = ExtResource("1")

[node name="GenerateDialog#GenerationField" type="LineEdit" parent="."]
offset_left = 126.0
offset_top = 60.0
offset_right = 194.563
offset_bottom = 91.0
placeholder_text = "Generation"

[node name="GenerateDialog#CurrencyField" type="LineEdit" parent="."]
offset_left = 134.0
offset_top = 113.0
offset_right = 202.563
offset_bottom = 144.0
placeholder_text = "Currency"

[node name="GenerateDialog#GenerateHeroButton" type="Button" parent="."]
offset_left = 132.0
offset_top = 163.0
offset_right = 212.0
offset_bottom = 194.0
text = "Generate"
